--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -1,11 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="k2q-IL-yXP">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="b8q-aC-bYM">
+            <objects>
+                <viewController id="k2q-IL-yXP" customClass="LoginViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LzU-nq-lsA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gTW-SE-YMM">
+                                <rect key="frame" x="95" y="306.5" width="185" height="54"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="185" id="Ow5-af-R2L"/>
+                                    <constraint firstAttribute="height" constant="54" id="vcg-MP-GEO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onLoginButton:" destination="k2q-IL-yXP" eventType="touchUpInside" id="agV-0o-BBI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="gTW-SE-YMM" firstAttribute="centerY" secondItem="LzU-nq-lsA" secondAttribute="centerY" id="e88-KV-lAA"/>
+                            <constraint firstItem="gTW-SE-YMM" firstAttribute="centerX" secondItem="LzU-nq-lsA" secondAttribute="centerX" id="gbn-uE-FSs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NhT-l7-Olo"/>
+                    </view>
+                    <connections>
+                        <segue destination="p10-FE-nRB" kind="presentation" identifier="loginToHome" modalPresentationStyle="fullScreen" id="8IK-8D-RFc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dwl-UG-ihe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="13.6" y="160.56971514242881"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="q3X-wg-Cc5">
+            <objects>
+                <tableViewController wantsFullScreenLayout="YES" modalPresentationStyle="fullScreen" id="iLB-zc-NPI" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="szf-Mz-Dxt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="115" id="9hE-WX-dUW" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="115"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9hE-WX-dUW" id="EdM-4f-HFW">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tnO-xZ-4QB">
+                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="65" id="0yZ-e6-gt6"/>
+                                                <constraint firstAttribute="width" constant="65" id="K1E-8D-2I6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sE-og-ZKl">
+                                            <rect key="frame" x="89" y="11" width="40" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaA-xU-9eE">
+                                            <rect key="frame" x="89" y="37" width="270" height="67"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="67" id="O1G-Sl-Yy0"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="xaA-xU-9eE" firstAttribute="leading" secondItem="tnO-xZ-4QB" secondAttribute="trailing" constant="8" id="JkD-il-9em"/>
+                                        <constraint firstItem="4sE-og-ZKl" firstAttribute="top" secondItem="EdM-4f-HFW" secondAttribute="topMargin" id="LFi-1I-Mam"/>
+                                        <constraint firstItem="tnO-xZ-4QB" firstAttribute="leading" secondItem="EdM-4f-HFW" secondAttribute="leadingMargin" id="XpC-PL-16X"/>
+                                        <constraint firstItem="xaA-xU-9eE" firstAttribute="trailing" secondItem="EdM-4f-HFW" secondAttribute="trailingMargin" id="dD1-M7-aCd"/>
+                                        <constraint firstItem="4sE-og-ZKl" firstAttribute="leading" secondItem="tnO-xZ-4QB" secondAttribute="trailing" constant="8" id="me1-qz-DyC"/>
+                                        <constraint firstItem="tnO-xZ-4QB" firstAttribute="top" secondItem="EdM-4f-HFW" secondAttribute="topMargin" id="mnx-1Q-DzK"/>
+                                        <constraint firstItem="xaA-xU-9eE" firstAttribute="bottom" secondItem="EdM-4f-HFW" secondAttribute="bottomMargin" id="oaN-4C-uyn"/>
+                                        <constraint firstItem="xaA-xU-9eE" firstAttribute="top" secondItem="4sE-og-ZKl" secondAttribute="bottom" constant="4" id="uUS-Im-qvC"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="tnO-xZ-4QB" id="eRn-pw-S6l"/>
+                                    <outlet property="tweetContent" destination="xaA-xU-9eE" id="oZy-sr-qaU"/>
+                                    <outlet property="userNameLabel" destination="4sE-og-ZKl" id="KwH-tV-qRg"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iLB-zc-NPI" id="NPm-CE-dXG"/>
+                            <outlet property="delegate" destination="iLB-zc-NPI" id="fwa-cD-3Av"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Home" id="Grm-9N-BbJ">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="wJT-Ng-k1k">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogout:" destination="iLB-zc-NPI" id="fU3-z4-E5r"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3sO-TS-SAm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1749.5999999999999" y="172.26386806596702"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="b0A-zd-tPV">
+            <objects>
+                <navigationController id="p10-FE-nRB" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PJt-qb-aKC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.0" green="0.49182307720000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.0" green="0.49182307720184326" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="iLB-zc-NPI" kind="relationship" relationship="rootViewController" id="tbr-Tx-81X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aqY-dM-yPA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="796" y="173"/>
+        </scene>
+    </scenes>
 </document>
