--- a/Twitter/Launch Screen.storyboard
+++ b/Twitter/Launch Screen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +15,29 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Twitter_Logo_Blue" translatesAutoresizingMaskIntoConstraints="NO" id="CxS-Bb-VGx">
+                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="CxS-Bb-VGx" secondAttribute="height" multiplier="1:1" id="8Op-eq-7LD"/>
+                                    <constraint firstAttribute="height" constant="375" id="8xb-B5-dVV"/>
+                                    <constraint firstAttribute="width" secondItem="CxS-Bb-VGx" secondAttribute="height" multiplier="1:1" id="AjX-wS-6Bi"/>
+                                    <constraint firstAttribute="width" secondItem="CxS-Bb-VGx" secondAttribute="height" multiplier="1:1" id="HiF-Db-zRg"/>
+                                    <constraint firstAttribute="width" constant="375" id="VUN-tr-MuB"/>
+                                    <constraint firstAttribute="width" secondItem="CxS-Bb-VGx" secondAttribute="height" multiplier="1:1" id="b0U-Jt-Z23"/>
+                                    <constraint firstAttribute="width" secondItem="CxS-Bb-VGx" secondAttribute="height" multiplier="1:1" id="eMa-JA-N5M"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="CxS-Bb-VGx" secondAttribute="bottom" id="92k-Rn-Y3f"/>
+                            <constraint firstItem="CxS-Bb-VGx" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="146" id="AWg-j2-ipY"/>
+                            <constraint firstItem="CxS-Bb-VGx" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" id="By2-3B-pTE"/>
+                            <constraint firstItem="CxS-Bb-VGx" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="IBn-xt-wWO"/>
+                            <constraint firstItem="CxS-Bb-VGx" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="Rgz-MQ-gMh"/>
+                            <constraint firstItem="CxS-Bb-VGx" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="lDE-eI-fnf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
                 </viewController>
@@ -26,4 +46,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Twitter_Logo_Blue" width="400" height="400"/>
+    </resources>
 </document>
